--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,11 +11,16 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
 
+    <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,11 +28,21 @@
         <header>
             <div class="menu-bar">
                 <nav class="navbar navbar-light bg-light justify-content-between">
-                    <a class="navbar-brand">Navbar</a>
-                    <form class="form-inline">
-                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                    <a class="navbar-brand" href="#"><img class="logo" src="/files/logo.png" alt="">CFMS</a>
+                   <div class="nav-bar-right">
+                     <a href="" class="profile">
+                       <div class="row">
+                         <div class="column">
+                           <div class="name">Najmul H. Bappy</div>
+                           <div class="profession">Student</div>
+                        </div>
+                         <div class="column"><img src="files/profile-pic.png" alt=""></div>
+                         <div class="column"><i class="fas fa-angle-down"></i></div>
+                       </div>
+                      
+
+                     </a>
+                   </div>
                   </nav>
             </div>
         </header>
