--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page | Crime File Management System</title>
-    <script src="/files/base.js"></script>
+
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -40,7 +40,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="css/base.css" />
   </head>
   <body>
     <div class="wrapper">
